# basejumpa.github.io

./: .editorconfig  .gitignore  LICENSE  README.adoc  README.md  index.html  pyproject.toml  requirements.txt  run.sh
.devcontainer/: devcontainer.json  setup.sh
.github/: FUNDING.yml
.github/workflows/: run.yml
doc/: conf.py
docs/: .config  .config.old  Kconfig  Makefile  conf.py  config.json  config.py  index.rst  references.bib
docs/_figures/: some-diagram.drawio
docs/_static/: custom.css
docs/_templates/: layout.html  me.html
docs/_templates/sections/: sidebar-primary.html  sidebar-secondary.html
docs/about/: index.rst
docs/bibliography/: index.rst
docs/blog/: index.rst
docs/blog/2024-07-WilliMakers/: index.rst
docs/blog/2024-08-MePosture/: index.rst
docs/blog/2024-08-Modular-React-Redux/: index.rst
docs/blog/2024-08-Neighbors-Allotment-Garden/: index.rst
docs/blog/2024-08-WeBalance/: index.rst
docs/blog/2024-08-WePosture/: index.rst
docs/blog/2024-09-WeSwitch/: behind_the_scenes.rst  index.rst  making_of.rst
docs/blog/2025-05-01-Awards-Ideas-and-Kudos/: index.md
docs/blog/2025-07-03-Classroom-Tinker-Gadget/: index.md
docs/blog/2025-08-15-Docs-As-Code-In-Engineering/: index.md
docs/blog/2025-08-Docs-As-Code-In-Engineering/: index.md
docs/blog/2026-03-Spec-Centered-Engineering/: index.md
docs/blog/2026-05-The-Bike-of-my-Dreams/: index.md
docs/hermesbaby/: index.md  index.rst
docs/imprint/: index.rst
docs/services/: index.md
website/projects/main/: CMakeLists.txt  run.sh  test.py
(+23 files in other folders)
