[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.4.7"
setuptools = "^71.1.0"
sphinxcontrib-bibtex = "^2.6.2"
sphinx-copybutton = "^0.5.2"
pydata-sphinx-theme = "^0.15.4"
sphinx-design = "^0.6.0"
sphinxcontrib-drawio = "^0.0.17"
sphinxcontrib-plantuml = "^0.30"
sphinxcontrib-mermaid = "^0.9.2"
ablog = "^0.11.10"
sphinxcontrib-youtube = "^1.4.1"


[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2024.4.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
